# mora02

./: .dockerignore  .gitignore  README.md
apps/_archive/: knowledge-api-README-old.md  pilot-README-old.md  script-runner-README-old.md
apps/knowledge-api/: Dockerfile  knowledge-api.py  knowledge-api.py.bak2
apps/pilot/: Dockerfile  app.py  app.py.bak  baserow_client.py  baserow_client.py.bak  bot_bridge.py  bot_bridge.py.bak  comfyui_client.py  config.py  llm_client.py  requirements.txt  router.py  session_manager.py
apps/piper-api/: Dockerfile  piper-api.py
apps/script-runner/: README.md  docker-compose-snippet.yml
docker/: .env.example  docker-compose.yml  migrate_roadmap_to_baserow.py
docker/searxng/: settings.yml
learning-lab/: questions.md
lib/mora02_core/: .gitignore  README.md  pyproject.toml
lib/mora02_core/src/mora02_core/: __init__.py  _common.py  assets.py  auth.py
lib/mora02_core/src/mora02_core/baserow/: __init__.py  api.py  client.py  installer.py  schema.py
lib/mora02_core/src/mora02_core/comfyui/: __init__.py  _config.py  api.py  builders.py  client.py  registry.py  style_injection.py  transforms.py
lib/mora02_core/src/mora02_core/llm/: __init__.py  claude_api.py  client.py  models.py  qwen.py  switcher.py
lib/mora02_core/tests/: test_assets.py  test_auth.py
scripts/: backfill-session-intros.py  clean-sessions.sh  install-llm-switch.sh  llm-switch.sh  pilot-lint-v3.sh  pilot-lint.sh
scripts/backup/: README_draft.md  backup-list.sh  backup-run.sh  borg-prune-dryrun.sh  borg-prune-live.sh
scripts/blender/: README.md  (+3 more)
(+279 files in other folders)
