[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mora02_core"
version = "0.0.1"
description = "Shared building blocks for the Mora02 creative AI factory"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jonnybenzin" }]
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
